--- a/CEX.MatchingEngine.Data/CEX.MatchingEngine.Data.csproj
+++ b/CEX.MatchingEngine.Data/CEX.MatchingEngine.Data.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CEX.MatchingEngine.Core\CEX.MatchingEngine.Core.csproj" />
+  </ItemGroup>
+
 </Project>
