--- a/CEX.MatchingEngine.Core/CEX.MatchingEngine.Core.csproj
+++ b/CEX.MatchingEngine.Core/CEX.MatchingEngine.Core.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.5" />
+    <PackageReference Include="MongoDB.Bson" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
