--- a/CEX.MatchingEngine.Demo/appsettings.json
+++ b/CEX.MatchingEngine.Demo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://localhost:27017/MatchingEngineDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
